<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barTitleColor"
    tools:context=".Login">
    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_input"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/password_input"
        android:layout_below="@+id/username_input"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/signin_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/primaryColor"
        android:textColor="#ffffff"
        android:text="@string/signin_Btn"
        android:textSize="20sp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/signup_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_below="@id/signin_Btn"
        android:layout_marginTop="80dp"
        android:text="@string/signup_Btn"/>

</RelativeLayout>
